--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,20 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+I chose rails for rapid development. I tried to use react but react-router has some issues with server-side rendering.
 
-Things you may want to cover:
+Requirements
 
-* Ruby version
+* ruby version 2.3.1
+* rails 4.2.6
+* postgresql
 
-* System dependencies
+To run the application
+	
+	cd walmart-rails
+	bundle install
+	rake db:create
+	rake db:migrate
+	rails server
 
-* Configuration
+And go to http://localhost:3000
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
